# solana-idls

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  addresses.toml  biome.json  devenv.nix  package.json
crates/quarry-merge-mine-cpi/: Cargo.toml
crates/quarry-merge-mine-cpi/src/: lib.rs
crates/quarry-mine-cpi/: Cargo.toml
crates/quarry-mine-cpi/src/: lib.rs
crates/solana-cpis/: Cargo.toml  README.md
crates/solana-cpis/src/: lib.rs
idls/: quarry_merge_mine.json  quarry_mine.json  quarry_mint_wrapper.json  quarry_operator.json  quarry_redeemer.json  quarry_registry.json
scripts/: process_idls.sh
source-idls/: quarry_merge_mine.json  quarry_mine.json  quarry_mint_wrapper.json  quarry_operator.json  quarry_redeemer.json  quarry_registry.json
